# dure

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CREDITS.md  Cargo.toml  PRIVACYPOLICY.md  README.md  SECURITY.md  _config.yml  deny.toml  index.md
crates/asyncapi-gen/: Cargo.toml  README.md
crates/asyncapi-gen/docs/api-docs/: index.html
crates/asyncapi-gen/docs/api-docs/js/: app.js
crates/asyncapi-gen/src/: asyncapi_spec.rs  lib.rs  main.rs
crates/asyncapi-gen/src/messages/: auth.rs  channel.rs  mod.rs  order.rs
crates/darkhttpd-sys/: .gitignore  ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION.md  QUICKSTART.md  README.md  STATUS.md  build.rs  darkhttpd_lib.c
crates/darkhttpd-sys/examples/: advanced.rs  basic.rs  nonblocking.rs
crates/darkhttpd-sys/src/: ffi.rs  lib.rs
crates/darkhttpd-sys/test_args/: index.html
crates/darkhttpd-sys/tests/: integration.rs
crates/dure-wss/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  QUICKSTART.md  README.md
crates/dure-wss/src/: lib.rs  main.rs
crates/go-webauthn/: CRYPTO_IMPLEMENTATION.md  Cargo.toml  ED25519_FIX.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  build.rs
crates/go-webauthn/examples/: README.md  basic.rs  credential_creation.rs  crypto_example.rs  multifactor_login.rs  passkey_login.rs
crates/go-webauthn/go/: gen.go  go.mod  go.sum  impl.go
crates/go-webauthn/src/: lib.rs
docs/: AGENT_INTEGRATION.md  ARCHITECTURE.md  ASYNCAPI_SUMMARY.md  CARGO_TREE.md  CLI_REFERENCE.md  GCP_REST_API_GUIDE.md  GCP_WIZARD_COMPLETE_FLOW.md  GUIDELINES_GIT_COMMITS.md  (+14 more)
mobile/: Cargo.toml  README.md  build.bsd.sh  build.gh.sh  build.gradle  build.rs  build.rust-only.sh  build.sh  build.wasm.sh  config.example.yml  diesel.toml  gradle.properties  qemu.sh
mobile/.lego/accounts/acme-v02.api.letsencrypt.org/nikescar@gmail.com/: account.json
mobile/.lego/accounts/acme-v02.api.letsencrypt.org/nikescar@gmail.com/keys/: nikescar@gmail.com.key
mobile/.lego/certificates/: dure.co.crt  dure.co.json  dure.co.key
mobile/app/: .gitignore  build.gradle
mobile/app/src/main/: AndroidManifest.xml
mobile/assets/languages/fluent/: en-US.ftl  ko-KR.ftl
mobile/examples/: gcp_list_projects.rs
mobile/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
mobile/migrations/2024-01-01-000001_create_dns_cache/: down.sql  up.sql
mobile/migrations/2024-01-01-000002_create_sessions/: down.sql  up.sql
mobile/migrations/2024-01-01-000003_create_hosting/: down.sql  up.sql
mobile/migrations/2024-01-01-000004_create_acme/: down.sql  up.sql
mobile/migrations/2024-01-01-000005_create_crypt/: down.sql  up.sql
mobile/migrations/2024-01-01-000006_create_webhook/: down.sql  up.sql
mobile/migrations/2024-01-01-000007_create_wss/: down.sql  up.sql
mobile/migrations/2024-01-01-000008_create_nft/: down.sql  up.sql
mobile/migrations/2024-01-01-000009_update_acme_for_lego/: down.sql  up.sql
mobile/migrations/2024-01-01-000010_create_authenticated_devices/: down.sql  up.sql
mobile/migrations/2024-01-01-000011_create_sites/: down.sql  up.sql
mobile/resources/: material-theme-green.json  material-theme-lightblue.json  material-theme-lightpink.json  material-theme-yellow.json
mobile/src/: asyncapi_spec.rs  config.rs  dure.rs  dure_stt.rs  i18n.rs  install.rs  install_stt.rs  lib.rs  log_capture.rs  main.rs  main_android.rs  main_wasm.rs  tray.rs
mobile/src/android/: activity.rs  clipboard.rs  contexttheme.rs  inputmethod.rs  log.rs  packagemanager.rs  screensize.rs
mobile/src/api/: desktop.rs  ehttp_cache.rs  gcp_oauth.rs  mod.rs  ns_cloudflare.rs  ns_duckdns.rs  ns_gcp.rs  ns_porkbun.rs
mobile/src/attestation/: download.rs  mod.rs  types.rs  verify.rs
mobile/src/calc/: acme.rs  audit.rs  crypt.rs  db.rs  dns.rs  gcp.rs  gcp_rest.rs  hosting.rs  keyring.rs  lego.rs  mod.rs  nft.rs  ns.rs  platform.rs  session.rs  site.rs  ssh.rs  webhook.rs  wss.rs
mobile/src/cli/: mod.rs
mobile/src/cli/commands/: acme.rs  audit.rs  crypt.rs  dns.rs  hosting.rs  keyring.rs  mod.rs  nft.rs  ns.rs  platform.rs  site.rs  ssh.rs  webhook.rs  wss.rs
mobile/src/cli/output/components/: stats.rs
mobile/src/site/: mod.rs
mobile/src/site/messages/: auth.rs  hosting.rs  member.rs  message.rs  mod.rs  payment.rs  product.rs  review.rs
mobile/src/storage/: diesel_schema.rs  mod.rs
mobile/src/storage/models/: acme.rs  audit.rs  crypt.rs  device.rs  dns.rs  hosting.rs  mod.rs  nft.rs  session.rs  site.rs  webhook.rs  wss.rs
mobile/src/ui_dlg/: about.rs  about_stt.rs  clipboard_popup.rs  mod.rs  platform_gcp.rs  settings.rs  settings_stt.rs  uninstall_confirm.rs  uninstall_confirm_stt.rs  update.rs  update_stt.rs  window.rs
mobile/src/ui_tabs/: channel.rs  client.rs  dm.rs  email.rs  members.rs  mod.rs  ns.rs  orders.rs  platform.rs  products.rs  roles.rs  site.rs  ssh.rs
mobile/src/wss/: client.rs  mod.rs
mobile/src/wss/server/: asyncapi_docs.rs  db.rs  http_get.rs  http_post.rs  https.rs  mod.rs  tls.rs  webauthn.rs  ws.rs
mobile/src/wss/server/api/: mod.rs  todo.rs  webhook.rs
mobile/src/wss/server/handlers/: auth.rs  mod.rs
mobile/tests/: test_sqlite3mc.rs  websocket_auth_client.rs
mobile/tests/common/: artifact_validator.rs.stub  assertions.rs.stub  cli.rs.stub  fixtures.rs.stub  harness.rs.stub  json_baseline.rs.stub
mobile/tests/e2e/: test_json_compat.sh.stub  test_mode_detection.sh.stub  test_rich_output.sh.stub
mobile/tests/prop/: bench_cold_warm_start.rs.stub  bench_real_datasets.rs.stub  benchmark_comparison.rs.stub  benchmark_datasets.rs.stub  conformance_edge_cases.rs.stub  conformance_workflows.rs.stub  e2e_audit.rs.stub  e2e_epic.rs.stub  e2e_errors.rs.stub  e2e_graph.rs.stub  e2e_history.rs.stub  e2e_installer.rs.stub  e2e_queries.rs.stub  e2e_version.rs.stub  jsonl_import_export.rs.stub  markdown_import.rs.stub  package_manifests.rs.stub  proptest_hash.rs.stub  proptest_validation.rs.stub  repro_cache_crash.rs.stub  repro_epic_blocking.rs.stub  repro_list_sort.rs.stub  repro_time_panic.rs.stub  storage_crud.rs.stub  storage_deps.rs.stub  storage_history.rs.stub  storage_ready.rs.stub
(+27 files in other folders)
