[package]
name = "dure"
build = "build.rs"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["serde", "spreadsheet"]
serde = ["dep:serde", "dep:serde_json"]
# UI features
spreadsheet = ["egui-material3/spreadsheet"]
# GCP integration (disabled by default until dependencies are available)
gcp = []
# Asupersync TLS features
asupersync-tls = ["asupersync/tls"]
asupersync-native-roots = ["asupersync/tls-native-roots"]
# Database backend features
postgres = ["diesel/postgres", "diesel/returning_clauses_for_sqlite_3_35"]

[lib]
name = "dure"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "dure-desktop"
path = "src/main.rs"

[dependencies]
# Core dependencies
log = { version = "0.4", default-features = false }
anyhow = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1.0", features = ["std"], optional = true }
chrono = { version = "0.4", features = ["serde"] }

# UI framework
egui = { version = "0.33", default-features = false, features = ["default_fonts"] }
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "android-native-activity",
] }
egui_extras = { version = "0.33", default-features = false, features = ["image", "svg", "default", "all_loaders"] }
egui-material3 = { git = "https://github.com/nikescar/egui-material3/", default-features = false, features = ["spreadsheet"] }
# egui-material3 = { path = "../reference/egui-material3", default-features = false, features = ["spreadsheet"] }

# i18n
egui-i18n = { version = "0.2", features = ["fluent"], default-features = false }
sys-locale = "0.3"

# HTTP for cross-platform image downloads
ehttp = "0.5.0"
webbrowser = { version = "1.2", default-features = false }

# Utilities
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
crossbeam-queue = "0.3"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
poll-promise = "0.3.0"
bincode = "1.3"
md5 = "0.7"

# Cryptography
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
base64 = "0.22"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
keepass = { version = "0.10", features = ["save_kdbx4"] }

# AsyncAPI documentation
asyncapi-rust = "0.2"
schemars = { version = "1.2", features = ["derive", "chrono04"] }
serde_yaml = "0.9"

# Desktop-only dependencies
[target.'cfg(not(any(target_os = "android", target_arch = "wasm32")))'.dependencies]
go-webauthn = { path = "../crates/go-webauthn" }
pollster = "0.4"  # Runtime-agnostic async executor for go-webauthn
tray-icon = { version = "0.18", default-features = false }
tao = "0.33"
trash = "5.2"
num_cpus = "1.17"
dashmap = "6.1"
env_logger = { version = "0.11", default-features = false }
directories = "5.0"
opener = "0.7"
dirs = "5.0"
hostname = "0.4"
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }
tar = "0.4"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
ureq = { version = "2.12", default-features = false, features = ["tls", "json"] }
# CLI dependencies
clap = { version = "4.6", features = ["derive"] }
# Diesel ORM for database operations
diesel = { version = "2.3", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.3"
# libsqlite3-hotbundle provides bundled SQLite3MultipleCiphers with encryption support
libsqlite3-hotbundle = { git = "https://github.com/nikescar/libsqlite3-hotbundle" }
dotenvy = "0.15"
# Asupersync async runtime (replaces async-std, async-tls, futures-util)
asupersync = { git = "https://github.com/Dicklesworthstone/asupersync", features = ["tls", "tls-native-roots"] }
# OpenAPI / Swagger UI
utoipa = { version="5.4.0", features = ["macros"] }
utoipa-swagger-ui = { version="9.0.2", features = ["vendored"] }
# WebSocket support with asupersync (custom fork)
async-tungstenite = { git = "https://github.com/nikescar/async-tungstenite", features = ["asupersync-runtime"] }
futures = "0.3"
rcgen = "0.13"
# Keep rustls ecosystem (asupersync uses it internally)
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rustls-native-certs = "0.8"
url = "2.5"
# SSH support for remote server management
ssh2 = "0.9"
shellexpand = "3.1"
# WebAuthn server-side support
webauthn-rs = { version = "0.5.0", features = ["danger-allow-state-serialisation"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
urlencoding = "2.1"
darkhttpd-sys = { path = "../crates/darkhttpd-sys" }

# Android-specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
ndk-context = { version = "0.1", default-features = false }
jni = { version = "0.21", default-features = false }
android_logger = { version = "0.15", default-features = false }
android-activity = { version = "0.6", default-features = false, features = ["native-activity"] }
ndk-sys = { version = "0.6.0", default-features = false }
eframe = { version = "0.33", default-features = false, features = ["default_fonts","glow","android-native-activity"] }
num_cpus = "1.17"
dashmap = "6.1"
ureq = { version = "2.12", default-features = false, features = ["tls", "json"] }
diesel = { version = "2.3", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.3"
libsqlite3-hotbundle = { git = "https://github.com/nikescar/libsqlite3-hotbundle" }

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
] }
windows = { version = "0.58", features = [
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_Foundation",
] }
eframe = { version = "0.33", default-features = false, features = ["default_fonts","glow"] }

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = { version = "0.3", features = ["CFRunLoop"] }
eframe = { version = "0.33", default-features = false, features = ["default_fonts","glow"] }

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
eframe = { version = "0.33", default-features = false, features = ["default_fonts","glow","x11", "wayland"] }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
futures = "0.3"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Navigator", "PublicKeyCredential", "PublicKeyCredentialCreationOptions", "CredentialCreationOptions", "CredentialRequestOptions", "CredentialsContainer", "Document", "WebSocket", "MessageEvent", "CloseEvent", "ErrorEvent", "BinaryType"] }
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.11", features = ["v4", "js"] }
diesel = { version = "2.3", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.3"
sqlite-wasm-vfs = "0.2.0"
sqlite-wasm-rs = "0.5.2"
serde-wasm-bindgen = "0.6"
webauthn-rs-proto = { version = "0.5.0", features = ["wasm"] }

[dev-dependencies]
tempfile = "3.27"

[build-dependencies]
winres = "0.1.12"
dotenvy = "0.15"

[lints]
workspace = true
