[package]
name = "dure-asyncapi-gen"
version = "0.0.1"
edition = "2021"
publish = false

[workspace]
# This is a standalone crate, not part of the dure workspace

[dependencies]
asyncapi-rust = "0.2"
schemars = { version = "1.1", features = ["derive", "chrono04"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
