[package]
name = "darkhttpd-sys"
version = "0.1.0"
edition = "2021"
authors = ["dure contributors"]
description = "Rust FFI bindings for darkhttpd - a simple, single-threaded, static content webserver"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/dure"

[lints.rust]
unsafe_code = "allow" # Required for FFI bindings

[build-dependencies]
cc = "1.0"

[dependencies]
libc = "0.2"
thiserror = "2.0"

[dev-dependencies]
ctrlc = "3.4"

[lib]
name = "darkhttpd_sys"
path = "src/lib.rs"
