[package]
name = "go-webauthn"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rust2go = "0.4.0"
rust2go-mem-ffi = "0.2.1"
mem-ring = "0.2.0"

[dev-dependencies]
futures = { version = "0.3", features = ["executor"] }
hex = "0.4"

[build-dependencies]
rust2go = { version = "0.4.0", features = ["build"] }
